# opengl-sandbox

./: .gitignore  CMakeLists.txt  README.md  run-debug.sh  run-release.sh  run.sh
shaders/: shader.fs  shader.vs
src/: Camera.h  OpenGLDebug.cpp  OpenGLDebug.h  Shader.h  main.cpp
